--- a/Application/Views/Blog/Index.cshtml
+++ b/Application/Views/Blog/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using Entities.Concrete
-@model List<Blog>
+﻿@using Entities.Dto_s
+@model List<BlogWithCategoriesDto>
 @{
     Layout = "_Layout";
 }
@@ -7,12 +7,11 @@
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">İD</th>
-                <th scope="col">Category İD</th>
+                
+                <th scope="col">Category Name</th>
                 <th scope="col">Title</th>
                 <th scope="col">Detail</th>
-                <th scope="col">Status</th>
-                <th scope="col">Created Time</th>
+                
             </tr>
         </thead>
 
@@ -20,23 +19,18 @@
             @foreach (var item in Model){
             <tr>
 
+                    
+                   
                     <th scope="row" style="color:red">
-                   @item.Id
-                   </th>
-                    <th scope="row" style="color:red">
-                        @item.CategoryId
+                        @item.CategoryName
                     </th>
                     <th scope="row" style="color:red">
                         @item.Title
                     </th>
+                    
+                    
                     <th scope="row" style="color:red">
-                        @item.Detail
-                    </th>
-                    <th scope="row" style="color:red">
-                        @item.Status
-                    </th>
-                    <th scope="row" style="color:red">
-                        @item.CreatedTime
+                    @item.Detail  
                     </th>
 
 
