--- a/Application/Views/Blog/BlogAdd.cshtml
+++ b/Application/Views/Blog/BlogAdd.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Entities.Concrete
+@model List<Category>
 @{
     Layout = "_Layout";
 }
@@ -8,6 +9,18 @@
     <label  class="form-label">Title</label>
     <input type="text" class="form-control" placeholder="title" maxlength="200" name="Title">
 </div>
+        <div class="mb-3">
+            <label class="form-label">Category</label>
+            <select class="form-control"   name="CategoryId">
+                @foreach (var item in Model)
+                {
+                    <option value=@item.Id>
+                        @item.CategoryName
+                    </option>
+                }
+            </select>
+        </div>
+
 <div class="mb-3">
     <label  class="form-label">Description</label>
     <textarea class="form-control" name="Description" rows="3"></textarea>
